# ucar-swe-assignment

./: CMakeLists.txt  README.md
ParameterizationPkg/: CMakeLists.txt  main.cpp
ParameterizationPkg/include/: ModelClient.h  Parameterization.h
ParameterizationPkg/include/helpers/: HelperMethods.h  ModelFactory.h
ParameterizationPkg/include/models/: FooEtAl.h
ParameterizationPkg/src/: ModelClient.cpp
ParameterizationPkg/src/helpers/: HelperMethods.cpp  ModelFactory.cpp
ParameterizationPkg/src/models/: FooEtAl.cpp
